--- a/.gitignore
+++ b/.gitignore
@@ -418,3 +418,6 @@ Skins/SysDash/
 Skins/Rainy Days (2020-07-27_190753)/
 Skins/_Examples-Container/
 Skins/_Examples-LuaTween/
+Skins/Cleartext/
+Skins/Fountain of Colors-MICHAEL-DESKTOP/
+Skins/WebNowPlayingExample/
