--- a/Skins/Sonder/Date/1-Date_hori1.ini
+++ b/Skins/Sonder/Date/1-Date_hori1.ini
@@ -10,7 +10,7 @@ Group=AllNoWeather
 Name=Sonder 2 - Date
 Config=
 Information=Date Horizontal
-Version=2.5.1
+Version=2.5.2
 Tags=
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 Variant=
@@ -36,7 +36,7 @@ W=(#DateScale#*640)
 H=(#DateScale#*45)
 
 [DateStyle]
-StringAlign=Center
+StringAlign=#DateAlign#
 StringCase=#DateStringCase#
 StringStyle=Normal
 StringEffect=shadow
@@ -51,7 +51,7 @@ ClipString=0
 Meter=STRING
 MeasureName=MeasureDate
 MeterStyle=DateStyle
-X=([Background:W]/2)
+X=([Background:W]/#DateAlignAdjust#)
 ;text=wednesday | september 25 2020
 Y=0
 
