--- a/Skins/Sonder/Settings/System-Advanced-Settings.ini
+++ b/Skins/Sonder/Settings/System-Advanced-Settings.ini
@@ -8,7 +8,7 @@ Name=CPU Config
 Author=mpurses (raiguard mod)
 Information=Configuration for Advanced System
 License=Creative Commons Attribution-NonCommercial-ShareAlike 3.0
-Version=2.5.1
+Version=2.5.2
 
 [Variables]
 @includeStyleSheet=#@#Styles-System\Advanced-StyleSheet.inc
@@ -26,8 +26,8 @@ useMoboFanSensor=0
 currentGadget=#SystemMeterConfig#
 ;currentGadget=#gpuMeterConfig#
 ;currentGadget=#disksMeterConfig#
-extProgram=1
-coreTempSource=Hwinfo
+extProgram=2
+coreTempSource=CoreTemp
 ;GPU
 gpuMeter1Config=Sonder\System\GPU1
 gpuMeter2Config=Sonder\System\GPU2
@@ -485,45 +485,45 @@ LeftMouseUpAction=!DeactivateConfig
 [CPUSettingsContainer]
 Meter=Shape
 X=10
-Y=70
-Shape=Rectangle 0,0,(#bgWidth#/3-14),360 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
+Y=68
+Shape=Rectangle 0,0,(#bgWidth#/3-14),365 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
 
 [RAMSettingsContainer]
 Meter=Shape
 X=(#bgWidth#/3+8)
-Y=355
-Shape=Rectangle 0,0,(#bgWidth#/3-14),94 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
+Y=360
+Shape=Rectangle 0,0,(#bgWidth#/3-14),90 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
 
 [GPUSettingsContainer]
 Meter=Shape
 X=(#bgWidth#/3+8)
-Y=70
-Shape=Rectangle 0,0,(#bgWidth#/3-14),256 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
+Y=68
+Shape=Rectangle 0,0,(#bgWidth#/3-14),263 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
 
 [DISKSettingsContainer]
 Meter=Shape
 X=(#bgWidth#*(2/3)+5)
-Y=70
-Shape=Rectangle 0,0,(#bgWidth#/3-14),160 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
+Y=68
+Shape=Rectangle 0,0,(#bgWidth#/3-14),165 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
 
 [HWinfoSettingsContainer]
 Meter=Shape
 X=(#bgWidth#*(2/3)+5)
-Y=257
+Y=260
 Shape=Rectangle 0,0,(#bgWidth#/3-14),125 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
 
 [SpeedFanSettingsContainer]
 Meter=Shape
 X=(#bgWidth#*(2/3)+5)
-Y=414
+Y=420
 Shape=Rectangle 0,0,(#bgWidth#/3-14),80 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
 
 [MeterSkinTitle]
 Meter=String
 MeterStyle=StyleStringSettings | StyleStringSettingsSkinTitle
-Text=CPU SETTINGS
+Text=CPU Settings
 X=(#bgWidth#/6)
-Y=50
+Y=40
 
 ; ------------------------------
 ; GENERAL
@@ -532,7 +532,7 @@ Y=50
 [MeterCpuTitleButtonIcon]
 Meter=Shape
 MeterStyle=StyleSettingsButton | StyleSettingsButton[&MeasureSettingsScript:GetAsset('check_icon', 'showCpuTitle', '1')]
-Y=25r
+Y=35r
 
 [MeterCpuTitleButtonLabel]
 Meter=String
@@ -548,7 +548,7 @@ LeftMouseUpAction=[!CommandMeasure MeasureSettingsScript "Toggle('showCpuTitle',
 [MeterCpuNameButtonIcon]
 Meter=Shape
 MeterStyle=StyleSettingsButton | StyleSettingsButton[&MeasureSettingsScript:GetAsset('check_icon', 'showCpuName', '1')]
-Y=R
+Y=5R
 
 [MeterCpuNameButtonLabel]
 Meter=String
@@ -565,7 +565,7 @@ LeftMouseUpAction=[!CommandMeasure MeasureSettingsScript "Toggle('showCpuName', 
 Meter=String
 MeterStyle=StyleStringSettings | StyleStringSettingsLabel
 X=[MeterCpuNameButtonLabel:X]r
-Y=R
+Y=5R
 Text=Custom CPU Name:
 
 [MeterCustomCpuNameHelpIcon]
@@ -961,7 +961,7 @@ MeterStyle=StyleInputBoxAdjustor
 ; Fill=Fill Color #colorAccent#
 ; FillRef=colorAccent
 ; X=8R
-; Y=r
+; Y=5R
 ; Padding=0,0,0,3
 ; LeftMouseUpAction=[Play "#ttSoundPath#"]
 ; ToolTipText=Play sound
@@ -1478,7 +1478,7 @@ Meter=String
 MeterStyle=StyleStringSettingsGPU | StyleStringSettingsSkinTitle
 Text=GPU Settings
 X=(#bgWidth#/2)
-Y=50
+Y=40
 ; ------------------------------
 ; GENERAL
 
@@ -1488,7 +1488,7 @@ Y=50
 [MeterGpuTitleButtonIcon]
 Meter=Shape
 MeterStyle=StyleSettingsButtonGPU | StyleSettingsButton[&MeasureSettingsScriptGPU:GetAsset('check_icon', 'showGpuTitle', '1')]
-Y=7R
+Y=15R
 
 [MeterGpuTitleButtonLabel]
 Meter=String
@@ -1505,7 +1505,7 @@ LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptGPU "Toggle('showGpuTitl
 Meter=Shape
 MeterStyle=StyleSettingsButtonGPU | StyleSettingsButton[&MeasureSettingsScriptGPU:GetAsset('check_icon', 'showGpuName', '1')]
 ;X=r
-Y=R
+Y=5R
 
 [MeterGpuNameButtonLabel]
 Meter=String
@@ -1523,7 +1523,7 @@ Meter=String
 MeterStyle=StyleStringSettingsGPU | StyleStringSettingsLabelGPU
 Text=Custom GPU Name:
 ; X=[MeterGpuNameButtonLabel:X]r
-Y=R
+Y=5R
 
 [MeterCustomGpuNameHelpIcon]
 Meter=Shape
@@ -1639,7 +1639,7 @@ Text=MB
 [MeterMemoryControllerButtonIcon]
 Meter=Shape
 MeterStyle=StyleSettingsButtonGPU | StyleSettingsButton[&MeasureSettingsScriptGPU:GetAsset('check_icon', 'showMemoryController', '1')]
-
+Y=10R
 [MeterMemoryControllerButtonLabel]
 Meter=String
 MeterStyle=StyleStringSettingsGPU | StyleSettingsButtonLabel
@@ -1901,15 +1901,15 @@ MeterStyle=StyleStringSettingsGPU | StyleStringSettingsSkinTitle
 ; FontSize=11
 ; FontWeight=700
 X=(#bgWidth#/2)
-Y=20R
-Text=RAM SETTINGS
+Y=5R
+Text=RAM Settings
 ;Group=Settings | ProgramSwitching | Hwinfo | SpeedFan | CoreTempSpeedFan
 
 ; Ram Title
 [MeterRamTitleButtonIcon]
 Meter=Shape
 MeterStyle=StyleSettingsButtonGPU | StyleSettingsButton[&MeasureSettingsScript:GetAsset('check_icon', 'showRamTitle', '1')]
-Y=25r
+Y=30r
 
 [MeterRamTitleButtonLabel]
 Meter=String
@@ -1973,9 +1973,9 @@ LeftMouseUpAction=[!CommandMeasure MeasureSettingsScript "Toggle('showPageAmount
 [MeterTitle]
 Meter=String
 MeterStyle=StyleStringSettingsHWinfo | StyleStringSettingsSkinTitle
-Text=DISK SETTINGS
+Text=DISK Settings
 X=(#bgWidth#*(5/6))
-Y=50
+Y=40
 
 ; ------------------------------
 ; GENERAL
@@ -1985,7 +1985,7 @@ Y=50
 Meter=Shape
 MeterStyle=StyleSettingsButtonDISK | StyleSettingsButton[&MeasureSettingsScriptDisk:GetAsset('check_icon', 'showDiskTitle', '1')]
 Group=Settings | HWiNFO
-Y=7R
+Y=15R
 
 [MeterDiskTitleButtonLabel]
 Meter=String
@@ -2184,7 +2184,7 @@ MeterStyle=StyleShapeBookIcon | StyleShapeButtonHover
 ToolTipText=View HWiNFO Configuration Tutorial
 LeftMouseUpAction=["https://github.com/raiguard/ModernGadgets/wiki/HWiNFO-Configuration"]
 X=(#bgWidth#*(5/6)-110)
-Y=6R
+Y=12R
 
 [MeterHiwinTutorial]
 Meter=String
@@ -2283,7 +2283,7 @@ LeftMouseUpAction=[!SetOption #CURRENTSECTION# Fill "Fill Color #colorAccent#"][
 Meter=String
 MeterStyle=StyleStringSettings | StyleStringSettingsSkinTitle
 X=(#bgWidth#*(5/6))
-Y=40r
+Y=35r
 Text=SpeedFan Configuration
 
 [MeterSpeedfanConfigTutorialIcon]
@@ -2291,7 +2291,7 @@ Meter=Shape
 MeterStyle=StyleShapeBookIcon | StyleShapeButtonHover
 ToolTipText=View SpeedFan Configuration Tutorial
 X=[MeterHwinfoConfigTutorialIcon:X]
-Y=6R
+Y=12R
 LeftMouseUpAction=["https://github.com/raiguard/ModernGadgets/wiki/SpeedFan-Configuration"]
 
 [MeterSpeedfanTutorial]
@@ -2369,7 +2369,7 @@ MeterStyle=StyleStringSettingsHWinfo | StyleStringCenterAlign
 FontColor=#colorError#
 W=(#bgWidth#/3-14)
 X=(#bgWidth#*(5/6))-2
-Y=-220r
+Y=-225r
 Text=HWINFO NOT DETECTED
 Group=NoHwinfo
 Hidden=1
@@ -2379,8 +2379,11 @@ Meter=String
 SolidColor=36,36,38,255
 MeterStyle=StyleStringSettingsHWinfo | StyleStringParagraph
 Text=GPU Meter relies on HWiNFO to function. Please make sure you have configured HWiNFO as per the setup tutorial. Once HWiNFO is running properly, this gadget will automatically refresh.
-W=(#bgWidth#/3-14)
-X=(#bgWidth#*(5/6)-123)
+Padding=5,5,5,0
+FontSize=9
+W=(#bgWidth#/3-23)
+Y=R
+X=(#bgWidth#*(5/6)-124)
 ;W=230
 Group=NoHwinfo
 Hidden=1
