--- a/Skins/Sonder/Space/ISS.ini
+++ b/Skins/Sonder/Space/ISS.ini
@@ -6,13 +6,15 @@ Group = HideHover
 MouseScrollUpAction=[!WriteKeyValue Variables ISSMapScale "(#ISSMapScale#+#ScrollMouseIncrement#)" "#@#Variables.inc"][!Refresh] 
 MouseScrollDownAction=[!WriteKeyValue Variables ISSMapScale "(#ISSMapScale#-#ScrollMouseIncrement# < 0.1 ? 0.1 : #ISSMapScale#-#ScrollMouseIncrement#)" "#@#Variables.inc"][!Refresh]
 MiddleMouseDownAction=!RainmeterActivateConfig "#ROOTCONFIG#\Settings" "ISS-Settings.ini"
+ContextTitle="ISS Settings..."
+ContextAction=[!ActivateConfig "#ROOTCONFIG#\Settings" "ISS-Settings.ini"]
 
 [Metadata]
 Name=International Space Station Tracker
 Author=mpurses
 Information=International Space Station tracker, passover times, humans on ISS, and info on next launch event.
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
-Version=2.5.1
+Version=2.5.2
 
 [Variables]
 @include=#@#Variables.inc
