--- a/Skins/Sonder/Network/Network-Graph.ini
+++ b/Skins/Sonder/Network/Network-Graph.ini
@@ -5,6 +5,7 @@
 [Rainmeter]
 Author=mpurses (Enigma-Kaelri mod)
 Group=AllNoWeather
+AccurateText=1
 
 [Variables]
 @include=#@#Variables.inc
@@ -26,5 +27,5 @@ Variant=Graph
 [Metadata]
 Name=Sonder 2 - Network (Graph)
 Information=Shows your LAN and WAN IP addresses, network activity and WiFi status.
-Version=2.5.1
+Version=2.5.2
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
