--- a/Skins/Sonder/Network/Network.ini
+++ b/Skins/Sonder/Network/Network.ini
@@ -3,6 +3,7 @@
 [Rainmeter]
 Author=mpurses (Enigma-Kaelri mod)
 Group=AllNoWeather
+AccurateText=1
 
 [Variables]
 @include=#@#Variables.inc
@@ -24,5 +25,5 @@ Variant=Normal
 [Metadata]
 Name=Sonder 2 - Network
 Information=Shows your LAN and WAN IP addresses, network activity and WiFi status.
-Version=2.5.1
+Version=2.5.2
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
