--- a/Skins/Sonder/Settings/System-Advanced-Settings.ini
+++ b/Skins/Sonder/Settings/System-Advanced-Settings.ini
@@ -26,8 +26,8 @@ useMoboFanSensor=0
 currentGadget=#SystemMeterConfig#
 ;currentGadget=#gpuMeterConfig#
 ;currentGadget=#disksMeterConfig#
-extProgram=2
-coreTempSource=CoreTemp
+extProgram=1
+coreTempSource=Hwinfo
 ;GPU
 gpuMeter1Config=Sonder\System\GPU1
 gpuMeter2Config=Sonder\System\GPU2
