--- a/.gitignore
+++ b/.gitignore
@@ -421,3 +421,4 @@ Skins/_Examples-LuaTween/
 Skins/Cleartext/
 Skins/Fountain of Colors-MICHAEL-DESKTOP/
 Skins/WebNowPlayingExample/
+Skins/Sonder/.vscode/
