--- a/Skins/Sonder/Date/5-Date_Weekday+Time.ini
+++ b/Skins/Sonder/Date/5-Date_Weekday+Time.ini
@@ -12,7 +12,7 @@ DynamicWindowSize=1
 
 [Metadata]
 Name=Weekday, Date, and Time
-Author=mpurses (HipHopium mod)
+Author=mpurses (Mond mod)
 Information=Weekday, Date and Time
 License=Creative Commons Attribution 3.0
 Version=2.5.2
