--- a/Skins/Sonder/Visualizer/SleepHelper/SleepHelper.ini
+++ b/Skins/Sonder/Visualizer/SleepHelper/SleepHelper.ini
@@ -5,7 +5,7 @@ AccurateText=1
 [Metadata]
 Name=Sleep Helper
 Author=mpurses
-Information=Automatic Visualizer load/unloader that checks if Spotify is loaded to let your computer sleep (and save CPU) while idle
+Information=Automatic Visualizer load/unloader that checks if Spotify is loaded (and unload the Visualizer if closed) to let your computer sleep (and save CPU) while idle.
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 Version=2.5.2
 
