--- a/Skins/Sonder/Network/Network.ini
+++ b/Skins/Sonder/Network/Network.ini
@@ -1,9 +1,15 @@
 ; NETWORK
-
+; Double Click to switch to other varient
 [Rainmeter]
-Author=mpurses (Enigma-Kaelri mod)
 Group=AllNoWeather
 AccurateText=1
+
+[Metadata]
+Author=mpurses (Enigma-Kaelri mod)
+Name=Sonder 2 - Network
+Information=Shows your LAN and WAN IP addresses, network activity and WiFi status.
+Version=2.5.2
+License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 [Variables]
 @include=#@#Variables.inc
@@ -20,10 +26,3 @@ GraphSubtraction=0
 ; METERS & MEASURES
 @include3=#ROOTCONFIGPATH#Network\Network.inc
 Variant=Normal
-
-
-[Metadata]
-Name=Sonder 2 - Network
-Information=Shows your LAN and WAN IP addresses, network activity and WiFi status.
-Version=2.5.2
-License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
