--- a/Skins/Sonder/Space/ISS.ini
+++ b/Skins/Sonder/Space/ISS.ini
@@ -14,11 +14,11 @@ Name=International Space Station Tracker
 Author=mpurses
 Information=International Space Station tracker, passover times, humans on ISS, and info on next launch event.
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
-Version=2.5.4
+Version=2.5.6
 
 [Variables]
 @include=#@#Variables.inc
-@include2=#@#Weather\RadarDataMeasures.inc
+;@include2=#@#Weather\RadarDataMeasures.inc
 ; --------------------------------------------------------------------------------------------
 ;                                       Measures
 ; --------------------------------------------------------------------------------------------
@@ -309,6 +309,9 @@ Measure=WebParser
 URL=[MeasurePersonSite]
 StringIndex=1
 RegExp=(?siU)name.*name.*name.*name": "(.*)"
+ErrorString=""
+Substitute="":""
+LogSubstringErrors=0
 
 [MeasurePerson4]
 Measure=WebParser
@@ -321,6 +324,9 @@ Measure=WebParser
 URL=[MeasurePersonSite]
 StringIndex=1
 RegExp=(?siU)name.*name.*name.*name.*name": "(.*)"
+ErrorString=""
+Substitute="":""
+LogSubstringErrors=0
 
 [MeasurePerson5]
 Measure=WebParser
@@ -335,6 +341,7 @@ StringIndex=1
 RegExp=(?siU)name.*name.*name.*name.*name.*name": "(.*)"
 ErrorString=""
 Substitute="":""
+LogSubstringErrors=0
 
 [MeasurePerson6]
 Measure=WebParser
@@ -439,17 +446,17 @@ ImageAlpha = #MapAlpha#
 ImageTint=#LandColor#
 DynamicVariables=1
 
-[MeterMapRadar]
-Meter=IMAGE
-;MeasureName=[*MeasureRadarImageWorld[&MeasureRadarImageWorldLoopNumber]*]
-ImageName=[MeasureRadarImageWorldAllGIF]
-X=(10*#ISSMapScale#)
-Y=(-635*#ISSMapScale#)
-W=(#MapWidth#*#ISSMapScale#)
-H=(#MapHeight#*#ISSMapScale#*1.85)
-ImageAlpha = #RadarAlpha#
-;ImageTint=#LandColor#
-DynamicVariables=1
+;[MeterMapRadar]
+;Meter=IMAGE
+;;MeasureName=[*MeasureRadarImageWorld[&MeasureRadarImageWorldLoopNumber]*]
+;ImageName=[MeasureRadarImageWorldAllGIF]
+;X=(10*#ISSMapScale#)
+;Y=(-635*#ISSMapScale#)
+;W=(#MapWidth#*#ISSMapScale#)
+;H=(#MapHeight#*#ISSMapScale#*1.85)
+;ImageAlpha = #RadarAlpha#
+;;ImageTint=#LandColor#
+;DynamicVariables=1
 
 [MeterISSPNG]
 Meter=IMAGE
