--- a/Skins/Sonder/Space/ISS.ini
+++ b/Skins/Sonder/Space/ISS.ini
@@ -14,11 +14,12 @@ Name=International Space Station Tracker
 Author=mpurses
 Information=International Space Station tracker, passover times, humans on ISS, and info on next launch event.
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
-Version=2.5.6
+Version=2.5.7
 
 [Variables]
+UserAgent=Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:80.0) Gecko/20100101 Firefox/80.0
 @include=#@#Variables.inc
-;@include2=#@#Weather\RadarDataMeasures.inc
+@include2=#@#Weather\RadarDataMeasures.inc
 ; --------------------------------------------------------------------------------------------
 ;                                       Measures
 ; --------------------------------------------------------------------------------------------
@@ -32,6 +33,8 @@ UpdateDivider = 1
 
 [MeasureSite]
 Measure=WebParser
+Flags=Resync | NoCookies
+UserAgent=#UserAgent#
 URL=http://api.open-notify.org/iss-now.json
 RegExp=(?siU)(.*)$
 ;RegExp=(?siU)longitude": "(.*)", "latitude": "(.*)"
@@ -69,10 +72,12 @@ Substitute="":"0"
 ; -------------------------- Get Next Visual ---------------------------
 [MeasureNextVisual]
 Measure=WebParser
+Flags=Resync | NoCookies
+UserAgent=#UserAgent#
 URL=http://api.open-notify.org/iss-pass.json?lat=#YourLat#&lon=#YourLon#
 RegExp=(?siU)(.*)$
 ;1 hour
-UpdateRate = 1800
+UpdateRate = 3600
 
 ;---------- Visual 1 -----------
 [MVisual1]
@@ -260,167 +265,101 @@ DynamicVariables=1
 ;--------------------------People on ISS right now ---------------------
 [MeasurePersonSite]
 Measure=WebParser
+Flags=Resync | NoCookies
+UserAgent=#UserAgent#
 URL=http://api.open-notify.org/astros.json
-RegExp=(?siU)(.*)$
-;RegExp=(?siU)name": "(.*)"}, {".*name": "(.*)"}, {".*name": "(.*)"}, {".*name": "(.*)"}, {".*name": "(.*)"}, {".*name": "(.*)"}
-;RegExp=(?siU)name": "(.*)"},.*, "name": "(.*)"},.*, "name": "(.*)"},.*, "name": "(.*)"},.*, "name": "(.*)"},.*, "name": "(.*)"}
+RegExp=(?siU)(?(?=.*"craft").*"name": "(.*)"})(?(?=.*"craft").*"name": "(.*)"})(?(?=.*"craft").*"name": "(.*)"})(?(?=.*"craft").*"name": "(.*)"})(?(?=.*"craft").*"name": "(.*)"})(?(?=.*"craft").*"name": "(.*)"})
 UpdateRate = 3600
+LogSubstringErrors=0
 
 ;---------- Person 1 -----------
-[MP1]
-Measure=WebParser
-URL=[MeasurePersonSite]
-StringIndex=1
-RegExp=(?siU)name": "(.*)"
-
 [MeasurePerson1]
 Measure=WebParser
-URL=[MP1]
+URL=[MeasurePersonSite]
 StringIndex=1
 ErrorString=""
 
 ;---------- Person 2 -----------
-[MP2]
-Measure=WebParser
-URL=[MeasurePersonSite]
-StringIndex=1
-RegExp=(?siU)name.*name": "(.*)"
-
 [MeasurePerson2]
 Measure=WebParser
-URL=[MP2]
-StringIndex=1
+URL=[MeasurePersonSite]
+StringIndex=2
 
 ;---------- Person 3 -----------
-[MP3]
-Measure=WebParser
-URL=[MeasurePersonSite]
-StringIndex=1
-RegExp=(?siU)name.*name.*name": "(.*)"
-
 [MeasurePerson3]
 Measure=WebParser
-URL=[MP3]
-StringIndex=1
+URL=[MeasurePersonSite]
+StringIndex=3
 
 ;---------- Person 4 -----------
-[MP4]
-Measure=WebParser
-URL=[MeasurePersonSite]
-StringIndex=1
-RegExp=(?siU)name.*name.*name.*name": "(.*)"
-ErrorString=""
-Substitute="":""
-LogSubstringErrors=0
-
 [MeasurePerson4]
 Measure=WebParser
-URL=[MP4]
-StringIndex=1
+URL=[MeasurePersonSite]
+StringIndex=4
 
 ;---------- Person 5 -----------
-[MP5]
-Measure=WebParser
-URL=[MeasurePersonSite]
-StringIndex=1
-RegExp=(?siU)name.*name.*name.*name.*name": "(.*)"
-ErrorString=""
-Substitute="":""
-LogSubstringErrors=0
-
 [MeasurePerson5]
 Measure=WebParser
-URL=[MP5]
-StringIndex=1
+URL=[MeasurePersonSite]
+StringIndex=5
 
 ;---------- Person 6 -----------
-[MP6]
-Measure=WebParser
-URL=[MeasurePersonSite]
-StringIndex=1
-RegExp=(?siU)name.*name.*name.*name.*name.*name": "(.*)"
-ErrorString=""
-Substitute="":""
-LogSubstringErrors=0
-
 [MeasurePerson6]
 Measure=WebParser
-URL=[MP6]
-StringIndex=1
-
+URL=[MeasurePersonSite]
+StringIndex=6
 
 ;---------------------------- Next rocket launch -----------------------
 
 [MeasureSpaceFlightInsideSite]
 Measure=WebParser
+Flags=Resync | NoCookies
+UserAgent=#UserAgent#
 URL=http://www.spaceflightinsider.com/launch-schedule/   
-RegExp=(?siU)(.*)$
+RegExp=(?siU)Next Launch.*<th>Mission<\/th>.*http.*>(.*)<.*<td class="vehicle">(.*)<.*<th>Time<\/th>.*<td>(.*)<\/td>.*Location.*<td>(.*)<
 UpdateRate = 3600
 
 [MeasureSpaceFlightInsideBadge]
 Measure=WebParser
+Flags=Resync | NoCookies
+UserAgent=#UserAgent#
 URL=http://www.spaceflightinsider.com/mission-monitor/  
 RegExp=(?siU)<div class="live-stream">.*<img src="(.*)"
 UpdateRate = 3600
 
-;*****************************************Mission**************************************
-[MeasureFM]
-Measure=WebParser
-URL=[MeasureSpaceFlightInsideSite]
-StringIndex=1
-RegExp=(?siU)Next Launch.*<th>Mission</th>.*http.*>(.*)<
-
-[MeasureFlightMission]
-Measure=WebParser
-URL=[MeasureFM]
-StringIndex=1
-ErrorString="Mission Unknown"
-
 ;*****************************************Image**************************************
-
 [MeasureFlightImage]
 Measure=WebParser
 URL=[MeasureSpaceFlightInsideBadge]
 StringIndex=1
 Download = 1
 
-;*****************************************Vehicle**************************************
-[MeasureFV]
+;*****************************************Mission**************************************
+[MeasureFlightMission]
 Measure=WebParser
 URL=[MeasureSpaceFlightInsideSite]
 StringIndex=1
-RegExp=(?siU)Next Launch.*<td class="vehicle">(.*)<
+ErrorString="Mission Unknown"
 
+;*****************************************Vehicle**************************************
 [MeasureFlightVehicle]
 Measure=WebParser
-URL=[MeasureFV]
+URL=[MeasureSpaceFlightInsideSite]
 ErrorString="Vehicle Unknown"
-StringIndex=1
+StringIndex=2
 
 ;*****************************************Time**************************************
-[MeasureFT]
-Measure=WebParser
-URL=[MeasureSpaceFlightInsideSite]
-StringIndex=1
-RegExp=(?siU)Next Launch.*<th>Time</th>.*<td>(.*)</td>
-
 [MeasureFlightTime]
 Measure=WebParser
-URL=[MeasureFT]
-StringIndex=1
+URL=[MeasureSpaceFlightInsideSite]
+StringIndex=3
 ErrorString="Time Unknown"
 
 ;*****************************************Location**************************************
-[MeasureFL]
-Measure=WebParser
-URL=[MeasureSpaceFlightInsideSite]
-StringIndex=1
-RegExp=(?siU)Next Launch.*Location.*<td>(.*)<
-
 [MeasureFlightLocation]
 Measure=WebParser
-URL=[MeasureFL]
-StringIndex=1
+URL=[MeasureSpaceFlightInsideSite]
+StringIndex=4
 ErrorString="Location Unknown"
 
 
@@ -446,17 +385,25 @@ ImageAlpha = #MapAlpha#
 ImageTint=#LandColor#
 DynamicVariables=1
 
-;[MeterMapRadar]
-;Meter=IMAGE
-;;MeasureName=[*MeasureRadarImageWorld[&MeasureRadarImageWorldLoopNumber]*]
-;ImageName=[MeasureRadarImageWorldAllGIF]
+;============== RADAR ================
+; NOTE ON ACCURACY: Radar data is converted(streched) from 'Web Mercator' to 'Robinson' map projection to best fit world map image as a whole. Change the ImageCrop option to match your location better...
+; https://docs.rainmeter.net/manual/meters/general-options/image-options/#ImageCrop
+[MeterMapRadar]
+Meter=IMAGE
+;MeasureName=[*MeasureRadarImageWorld[&MeasureRadarImageWorldLoopNumber]*]
+MeasureName=MeasureRadarImageWorldAllGIF
+ImageName=%1
+ImageCrop=-2000,-555,4000,1100,5
+;SolidColor=255,0,0,30
 ;X=(10*#ISSMapScale#)
 ;Y=(-635*#ISSMapScale#)
-;W=(#MapWidth#*#ISSMapScale#)
-;H=(#MapHeight#*#ISSMapScale#*1.85)
-;ImageAlpha = #RadarAlpha#
-;;ImageTint=#LandColor#
-;DynamicVariables=1
+W=(#MapWidth#*#ISSMapScale#)
+H=(#MapHeight#*#ISSMapScale#)
+;*1.85
+ImageAlpha = #RadarAlpha#
+;ImageTint=#LandColor#
+DynamicVariables=1
+Hidden=#ShowRadar#
 
 [MeterISSPNG]
 Meter=IMAGE
@@ -475,9 +422,21 @@ ToolTipType=1
 ToolTipWidth=300
 ToolTipTitle=International Space Station
 tooltiptext=Location: [Latitude], [Longitude]#CRLF##CRLF#Next passovers at your location:#CRLF#[MeasureISSVisualDate1] @ [MeasureISSVisualTime1]#CRLF#[MeasureISSVisualDate2] @ [MeasureISSVisualTime2]#CRLF#[MeasureISSVisualDate3] @ [MeasureISSVisualTime3]#CRLF#[MeasureISSVisualDate4] @ [MeasureISSVisualTime4]#CRLF##CRLF#Humans on ISS right now:#CRLF#[MeasurePerson1]#CRLF#[MeasurePerson2]#CRLF#[MeasurePerson3]#CRLF#[MeasurePerson4]#CRLF#[MeasurePerson5]#CRLF#[MeasurePerson6]#CRLF##CRLF#Next rocket launch:#CRLF#Mission: [MeasureFlightMission]#CRLF#Vehicle: [MeasureFlightVehicle]#CRLF#Location: [MeasureFlightLocation]#CRLF#Time: [MeasureFlightTime]
-MouseOverAction=[!SetOption MeterISSPNG ImageAlpha 255][!UpdateMeter MeterISSPNG][!Redraw]
-MouseLeaveAction=[!SetOption MeterISSPNG ImageAlpha #ISSAlpha#][!UpdateMeter MeterISSPNG][!Redraw]
+MouseOverAction=[!ShowMeter MeterISSPNG_FlightImage][!SetOption MeterISSPNG ImageAlpha 255][!UpdateMeter MeterISSPNG][!Redraw]
+MouseLeaveAction=[!HideMeter MeterISSPNG_FlightImage][!SetOption MeterISSPNG ImageAlpha #ISSAlpha#][!UpdateMeter MeterISSPNG][!Redraw]
 ;#CRLF#[MeasureFlightImage]
+
+[MeterISSPNG_FlightImage]
+Meter=IMAGE
+SolidColor=0,0,0,1
+MeasureName=MeasureFlightImage
+ImageName=%1
+W=((#issSize#*3*#ISSScale#)*#ISSMapScale#)
+H=((#issSize#*3*#ISSScale#)*#ISSMapScale#)
+X=(-(#issSize#*3.5*#ISSScale#)*#ISSMapScale#)r
+Y=(-(#issSize#*#ISSScale#)*#ISSMapScale#)r
+Hidden=1
+DynamicVariables=1
 
 ;-------------OTHER THINGS YOU CAN DISPLAY---------------
 ;   ---Equator and PrimeMeridian Lines---
