--- a/Skins/Sonder/Visualizer/SleepHelper/SleepHelper.ini
+++ b/Skins/Sonder/Visualizer/SleepHelper/SleepHelper.ini
@@ -7,7 +7,7 @@ Name=Sleep Helper
 Author=mpurses
 Information=Automatic Visualizer load/unloader that checks if Spotify is loaded (and unload the Visualizer if closed) to let your computer sleep (and save CPU) while idle.
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
-Version=2.5.6
+Version=2.5.7
 
 [Variables]
 @include=#@#Variables.inc
@@ -23,14 +23,14 @@ Version=2.5.6
 ;    State/Status(If it is playing/loaded) are not supported for Spotify
 ; Spotify: 	PlayerName=Spotify
 
-;Since I can't tell if Spotify is loaded/playing, I'm checking if I can read an artist. If you pause Spotify and leave it open, this will not work as an artist will still be read
+;Since I can't tell if Spotify is playing currently, I'm checking if I can read an artist. If you pause Spotify and leave it open, this will not work as an artist will still be read
 [UnloadIfNotPlayingSpotify]
 Measure=NowPlaying
 PlayerName=Spotify
 PlayerType=Artist
 IfMatch=^$
-IfMatchAction=[!DeactivateConfig "#ROOTCONFIG#\Visualizer"][!Log "Unload Visualizer"]
-IfNotMatchAction=[!ActivateConfig "#ROOTCONFIG#\Visualizer" "Dots-Visualizer.ini"][!Log "Load Visualizer"]
+IfMatchAction=[!DeactivateConfig "#ROOTCONFIG#\Visualizer"][!Log "Spotify Closed: Unload Visualizer"]
+IfNotMatchAction=[!ActivateConfig "#ROOTCONFIG#\Visualizer" "Dots-Visualizer.ini"][!Log "Spotify Open: Load Visualizer"]
 
 ;Use this measure format instead if using another player
 ; [UnloadIfNotPlaying]
