--- a/Skins/Sonder/Date/4-Date_Global.ini
+++ b/Skins/Sonder/Date/4-Date_Global.ini
@@ -6,6 +6,8 @@ MouseScrollUpAction=[!WriteKeyValue Variables DateScale "(#DateScale#+#ScrollMou
 MouseScrollDownAction=[!WriteKeyValue Variables DateScale "(#DateScale#-#ScrollMouseIncrement# < 0.2 ? 0.2 : #DateScale#-#ScrollMouseIncrement#)" "#@#Variables.inc"][!Refresh]
 ;[!SetVariable DateScale "(#DateScale#-#ScrollMouseIncrement# < 0.2 ? 0.2 : #DateScale#-#ScrollMouseIncrement#)" "#@#Variables.inc"]
 AccurateText=1
+ContextTitle="Date Settings..."
+ContextAction=[!ActivateConfig "#ROOTCONFIG#\Settings" "! Settings-All.ini"]
 
 [Metadata]
 Name=Global Date
