--- a/Skins/Sonder/Date/5-Date_Weekday+Time.ini
+++ b/Skins/Sonder/Date/5-Date_Weekday+Time.ini
@@ -9,6 +9,8 @@ MouseScrollDownAction=[!WriteKeyValue Variables DateScale "(#DateScale#-#ScrollM
 ;[!SetVariable DateScale "(#DateScale#-#ScrollMouseIncrement# < 0.2 ? 0.2 : #DateScale#-#ScrollMouseIncrement#)" "#@#Variables.inc"]
 AccurateText=1
 DynamicWindowSize=1
+ContextTitle="Date Settings..."
+ContextAction=[!ActivateConfig "#ROOTCONFIG#\Settings" "! Settings-All.ini"]
 
 [Metadata]
 Name=Weekday, Date, and Time
@@ -50,7 +52,7 @@ MeasureName=MeasureDay
 StringAlign=Center
 StringCase=Upper
 StringEffect=Shadow
-FontEffectColor=#color2#
+FontEffectColor=#TimeShadowColor#
 Fontweight=500
 FontFace=Raleway ExtraLight
 FontColor=#Color1#
@@ -70,7 +72,7 @@ MeasureName=MeasureDate
 StringAlign=Center
 StringCase=Upper
 StringEffect=Shadow
-FontEffectColor=#color2#
+FontEffectColor=#TimeShadowColor#
 FontFace=Raleway ExtraLight
 ;FontFace=Quicksand
 FontColor=#Color1#
@@ -87,7 +89,7 @@ MeasureName=MeasureTime
 StringAlign=Center
 StringCase=Upper
 StringEffect=Shadow
-FontEffectColor=#color2#
+FontEffectColor=#TimeShadowColor#
 ;FontFace=Quicksand
 FontFace=Raleway ExtraLight
 FontColor=#Color1#
