--- a/Skins/Sonder/Recycle/Bin_1.ini
+++ b/Skins/Sonder/Recycle/Bin_1.ini
@@ -6,6 +6,8 @@ BackgroundMode=3
 BackgroundMargins=0,0,0,0
 Group=AllNoWeather | AllNoVisualizer
 ;@include=#@#Fonts.inc
+ContextTitle="Recycle Bin Settings..."
+ContextAction=[!ActivateConfig "#ROOTCONFIG#\Settings" "! Settings-All.ini"]
 
 [Metadata]
 Name=Sonder 2 - Recycle Bin
