--- a/Skins/Sonder/Time/Time_hori1.ini
+++ b/Skins/Sonder/Time/Time_hori1.ini
@@ -8,6 +8,11 @@ MouseScrollDownAction=[!WriteKeyValue Variables TimeScale "(#TimeScale#-#ScrollM
 ;[!SetVariable TimeScale "(#TimeScale#-#ScrollMouseIncrement# < 0.2 ? 0.2 : #TimeScale#-#ScrollMouseIncrement#)" "#@#Variables.inc"]
 Group=AllNoWeather | AllNoVisualizer
 ;@include=#@#Fonts.inc
+;Update=16
+ContextTitle="Time Settings..."
+ContextAction=[!ActivateConfig "#ROOTCONFIG#\Settings" "! Settings-All.ini"]
+DynamicWindowSize=1
+AccurateText=1
 
 [Metadata]
 Name=Sonder 2 - Time (horizontal)
@@ -17,18 +22,24 @@ Version=2.5.7
 License=Creative Commons Attribution-Non-Commercial-Share Alike 3.0
 
 
-[MeasureTime]
+[MeasureTimeHour]
 Measure=Time
 Format="#Hours#"
-;Format="04"
+;sFormat="00"
 
-[MeasureTime2]
+[MeasureTimeMinutes]
 Measure=Time
 Format="%M"
-;Format="38"
+;Format="00"
 
 [Variables]
 @include=#@#Variables.inc
+;TMm11=1
+;TMm12=-0.31
+;TMm21=0
+;TMm22=1
+;TMm31TX=0
+;TMm32TY=0
 
 ;-------------------------------
 [Measuresettingsformula]
@@ -63,8 +74,8 @@ Hidden=1
 StringAlign=Center
 StringCase=None
 StringStyle=Normal
-StringEffect=None
-FontEffectColor=#color2#
+StringEffect=Shadow
+FontEffectColor=#TimeShadowColor#
 FontColor=#color1#
 FontFace=#TimeFont#
 FontSize=(#TimeScale#*#TimeFontSize#)
@@ -75,49 +86,62 @@ ClipString=0
 StringAlign=Center
 StringCase=None
 StringStyle=Normal
-StringEffect=None
-FontEffectColor=#color2#
+StringEffect=Shadow
+FontEffectColor=#TimeShadowColor#
 FontColor=#color3#
 FontFace=#TimeFont#
 FontSize=(#TimeScale#*#TimeFontSize#)
 AntiAlias=1
 ClipString=0
 
-[timeshadow]
-StringAlign=Center
-StringStyle=Normal
-FontColor=#color2#
-FontFace=#TimeFont#
-FontSize=(#TimeScale#*#TimeFontSize#)
-AntiAlias=1
-ClipString=0
+;There are two shadows, one with its own meter: 
+; X=(#TimeScale#*114)
+; Y=(#TimeScale#*(-22+#TimeYAdj#))
+;one within the shadow effect on the main time meter:
+; X=(#TimeScale#*112)
+; Y=(#TimeScale#*-3)r
 
-[Time1shadow]
-Meter=STRING
-MeasureName=MeasureTime
-MeterStyle=timeshadow
-X=(#TimeScale#*114)
-Y=(#TimeScale#*(-22+#TimeYAdj#))
+;[timeshadow]
+;StringAlign=Center
+;StringStyle=Normal
+;FontColor=#TimeShadowColor#
+;FontFace=#TimeFont#
+;FontSize=(#TimeScale#*#TimeFontSize#)
+;AntiAlias=1
+;ClipString=0
 
-[Time2shadow]
-Meter=STRING
-MeasureName=MeasureTime2
-MeterStyle=timeshadow
-X=(#TimeScale#*(225+#TimeHMSpacing#))r
-Y=r
+;[Time1shadow]
+;Meter=STRING
+;MeasureName=MeasureTimeHour
+;MeterStyle=timeshadow
+;X=(#TimeScale#*114)
+;Y=(#TimeScale#*(-22+#TimeYAdj#))
 
+;[Time2shadow]
+;Meter=STRING
+;MeasureName=MeasureTimeMinutes
+;MeterStyle=timeshadow
+;X=(#TimeScale#*(225+#TimeHMSpacing#))r
+;Y=r
+
+;Blur: Shadow | 0 | 0 | 3 | [fontcolor]
+;Shadow: Shadow | 2 | 3 | 0 | #TimeShadowColor#
 [Time1]
 Meter=STRING
-StringEffect=Shadow
-MeasureName=MeasureTime
+MeasureName=MeasureTimeHour
 MeterStyle=time1style
 X=(#TimeScale#*112)
-Y=(#TimeScale#*-3)r
+Y=(#TimeScale#*(-25+#TimeYAdj#))
+InlineSetting=Shadow | #ShadowBlurX# | #ShadowBlurY# | #TimeBlurAmount# | #TimeShadowColorHour#
+DynamicVariables=1
+;TransformationMatrix=#TMm11#;#TMm12#;#TMm21#;#TMm22#;#TMm31TX#;#TMm32TY#
 
 [Time2]
 Meter=STRING
-StringEffect=Shadow
-MeasureName=MeasureTime2
+MeasureName=MeasureTimeMinutes
 MeterStyle=time2style
 X=(#TimeScale#*(225+#TimeHMSpacing#))r
 Y=r
+InlineSetting=Shadow | #ShadowBlurX# | #ShadowBlurY# | #TimeBlurAmount# | #TimeShadowColorMinute#
+
+
