--- a/Skins/Sonder/Time/Time_vert1.ini
+++ b/Skins/Sonder/Time/Time_vert1.ini
@@ -4,6 +4,10 @@ MouseLeaveAction=[!RainmeterHideMeter colors][!RainmeterRedraw]
 MiddleMouseDownAction=!RainmeterActivateConfig #CURRENTCONFIG# Time_hori1.ini
 Group=AllNoWeather | AllNoVisualizer
 ;@include=#@#Fonts.inc
+ContextTitle="Time Settings..."
+ContextAction=[!ActivateConfig "#ROOTCONFIG#\Settings" "! Settings-All.ini"]
+DynamicWindowSize=1
+AccurateText=1
 
 [Metadata]
 Name=Sonder 2 - Time (vertical)
@@ -19,6 +23,7 @@ Format="#Hours#"
 [MeasureTime2]
 Measure=Time
 Format="%M"
+
 
 [Variables]
 @include=#@#Variables.inc
@@ -55,8 +60,8 @@ Hidden=1
 StringAlign=Center
 StringCase=None
 StringStyle=Normal
-StringEffect=None
-FontEffectColor=#color2#
+StringEffect=Shadow
+FontEffectColor=#TimeShadowColor#
 FontColor=#color1#
 FontFace=#TimeFont#
 FontSize=(#TimeScale#*#TimeFontSize#)
@@ -67,47 +72,51 @@ ClipString=0
 StringAlign=Center
 StringCase=None
 StringStyle=Normal
-StringEffect=None
-FontEffectColor=#color2#
+StringEffect=Shadow
+FontEffectColor=#TimeShadowColor#
 FontColor=#color3#
 FontFace=#TimeFont#
 FontSize=(#TimeScale#*#TimeFontSize#)
 AntiAlias=1
 ClipString=0
 
-[timeshadow]
-StringAlign=Center
-StringStyle=Normal
-FontColor=#color2#
-FontFace=#TimeFont#
-FontSize=(#TimeScale#*#TimeFontSize#)
-AntiAlias=1
-ClipString=0
+;[timeshadow]
+;StringAlign=Center
+;StringStyle=Normal
+;FontColor=#TimeShadowColor#
+;FontFace=#TimeFont#
+;FontSize=(#TimeScale#*#TimeFontSize#)
+;AntiAlias=1
+;ClipString=0
 
-[Times1hadow]
-Meter=STRING
-MeasureName=MeasureTime
-MeterStyle=timeshadow
-X=(#TimeScale#*126)
-Y=(#TimeScale#*(-20+#TimeYAdj#))
+;[Times1hadow]
+;Meter=STRING
+;MeasureName=MeasureTime
+;MeterStyle=timeshadow
+;X=(#TimeScale#*126)
+;Y=(#TimeScale#*(-20+#TimeYAdj#))
 
 [Time1]
 Meter=STRING
 MeasureName=MeasureTime
 MeterStyle=time1style
-X=(#TimeScale#*-2)r
-Y=(#TimeScale#*-3)r
+X=(#TimeScale#*124)
+Y=(#TimeScale#*(-23+#TimeYAdj#))
+InlineSetting=Shadow | #ShadowBlurX# | #ShadowBlurY# | #TimeBlurAmount# | #TimeShadowColorHour#
+DynamicVariables=1
 
-[Time2shadow]
-Meter=STRING
-MeasureName=MeasureTime2
-MeterStyle=timeshadow
-X=(#TimeScale#*126)
-Y=(#TimeScale#*(154+#TimeYAdj#))
+;[Time2shadow]
+;Meter=STRING
+;MeasureName=MeasureTime2
+;MeterStyle=timeshadow
+;X=(#TimeScale#*126)
+;Y=(#TimeScale#*(154+#TimeYAdj#))
 
 [Time2]
 Meter=STRING
 MeasureName=MeasureTime2
 MeterStyle=time2style
-X=(#TimeScale#*-2)r
-Y=(#TimeScale#*-3)r
+X=r
+Y=(#TimeScale#*(174+#TimeHMSpacingVert#))r
+InlineSetting=Shadow | #ShadowBlurX# | #ShadowBlurY# | #TimeBlurAmount# | #TimeShadowColorMinute#
+DynamicVariables=1
