--- a/Skins/Sonder/Date/1-Date_hori1.ini
+++ b/Skins/Sonder/Date/1-Date_hori1.ini
@@ -4,7 +4,8 @@ MiddleMouseDownAction=!RainmeterActivateConfig #CURRENTCONFIG# 1-Date_vert1.ini
 MouseScrollUpAction=[!WriteKeyValue Variables DateScale "(#DateScale#+#ScrollMouseIncrement#)" "#@#Variables.inc"][!Refresh] 
 MouseScrollDownAction=[!WriteKeyValue Variables DateScale "(#DateScale#-#ScrollMouseIncrement# < 0.2 ? 0.2 : #DateScale#-#ScrollMouseIncrement#)" "#@#Variables.inc"][!Refresh]
 Group=AllNoWeather | AllNoVisualizer
-;@include=#@#Fonts.inc
+ContextTitle="Date Settings..."
+ContextAction=[!ActivateConfig "#ROOTCONFIG#\Settings" "! Settings-All.ini"]
 
 [Metadata]
 Name=Sonder 2 - Date
@@ -36,7 +37,7 @@ StringAlign=#DateAlign#
 StringCase=#DateStringCase#
 StringStyle=Normal
 StringEffect=shadow
-FontEffectColor=#color2#
+FontEffectColor=#TimeShadowColor#
 FontColor=#DateColor1#
 FontFace=#DateFont#
 FontSize=(#DateScale#*25)
