--- a/Skins/Sonder/Network/Network-Graph.ini
+++ b/Skins/Sonder/Network/Network-Graph.ini
@@ -4,6 +4,8 @@
 [Rainmeter]
 Group=AllNoWeather | AllNoVisualizer
 AccurateText=1
+ContextTitle="Network Settings..."
+ContextAction=[!ActivateConfig "#ROOTCONFIG#\Settings" "! Settings-All.ini"]
 
 [Metadata]
 Author=mpurses (Enigma-Kaelri mod)
