--- a/Skins/Sonder/Settings/System-Advanced-Settings.ini
+++ b/Skins/Sonder/Settings/System-Advanced-Settings.ini
@@ -156,6 +156,7 @@ ConfigPath=#SystemMeterConfig#
 MeasureInputText=MeasureSettingsInputText
 ; GPU ACTIONSETS
 GpuNameAction=[!SetOptionGroup GpuName Disabled "(#showGpuName# = 0)" "#SystemMeterConfig#"][!SetOption MeterGpuName Hidden "(#showGpuName# = 0)" "#SystemMeterConfig#"][!SetOption MeterGpuName Y "((#showGpuName# = 0) ? 0 : #rowSpacing#)R" "#SystemMeterConfig#"][!UpdateMeterGroup GpuName "#SystemMeterConfig#"][!UpdateMeter MeterGpuName "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
+GPUClockAction=[!SetOptionGroup GPUClock Disabled "(#showGPUClock# = 0)" "#SystemMeterConfig#"][!UpdateMeasureGroup GPUClock "#SystemMeterConfig#"][!SetOptionGroup GPUClock Hidden "(#showGPUClock# = 0)" "#SystemMeterConfig#"][!UpdateMeterGroup GPUClock "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
 MemoryClockAction=[!SetOptionGroup MemoryClock Disabled "(#showMemoryClock# = 0)" "#SystemMeterConfig#"][!UpdateMeasureGroup MemoryClock "#SystemMeterConfig#"][!SetOptionGroup MemoryClock Hidden "(#showMemoryClock# = 0)" "#SystemMeterConfig#"][!UpdateMeterGroup MemoryClock "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
 VRAMAction=[!SetOptionGroup Memory Disabled "(#showVRAM# = 0)" "#SystemMeterConfig#"][!UpdateMeasureGroup Memory "#SystemMeterConfig#"][!SetOptionGroup GpuVram Hidden "(#showVRAM# = 0)" "#SystemMeterConfig#"][!UpdateMeterGroup GpuVram "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
 FanInfoAction=[!SetOptionGroup GpuFan Hidden "(#showFanInfo# = 0)" "#SystemMeterConfig#"][!SetOption GpuFanUsageLabelString Y "((#showFanInfo# = 1) ? #rowSpacing# : -#barTextOffset#)R" "#SystemMeterConfig#"][!UpdateMeterGroup GpuFan "#SystemMeterConfig#"][!UpdateMeterGroup Background "#SystemMeterConfig#"][!Redraw "#SystemMeterConfig#"]
@@ -491,14 +492,14 @@ Shape=Rectangle 0,0,(#bgWidth#/3-14),365 | Fill Color 36,36,38,255 | Stroke Colo
 [RAMSettingsContainer]
 Meter=Shape
 X=(#bgWidth#/3+8)
-Y=360
+Y=380
 Shape=Rectangle 0,0,(#bgWidth#/3-14),90 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
 
 [GPUSettingsContainer]
 Meter=Shape
 X=(#bgWidth#/3+8)
 Y=68
-Shape=Rectangle 0,0,(#bgWidth#/3-14),263 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
+Shape=Rectangle 0,0,(#bgWidth#/3-14),283 | Fill Color 36,36,38,255 | Stroke Color 255,255,255,0
 
 [DISKSettingsContainer]
 Meter=Shape
@@ -1562,12 +1563,31 @@ MeterStyle=StyleInputBoxAdjustor
 ; MeterStyle=StyleSettingsButtonMouseRegionGPU
 ; LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptGPU "Toggle('showGPUClock', '1', '0', 'GPUClockAction')"]
 
+;=====================================================================
+;====================================================================
+;=====================================================================
+; GPU Clock
+[MeterGPUClockButtonIcon]
+Meter=Shape
+MeterStyle=StyleSettingsButtonGPU | StyleSettingsButton[&MeasureSettingsScriptGPU:GetAsset('check_icon', 'showGPUClock', '1')]
+Y=5R
+
+[MeterGPUClockButtonLabel]
+Meter=String
+MeterStyle=StyleStringSettingsGPU | StyleSettingsButtonLabel
+Text=GPU Clock/Temp
+
+[MeterGPUClockButtonMouseRegion]
+Meter=Image
+MeterStyle=StyleSettingsButtonMouseRegionGPU
+LeftMouseUpAction=[!CommandMeasure MeasureSettingsScriptGPU "Toggle('showGPUClock', '1', '0', 'GPUClockAction')"]
+
 
 ; Memory Clock
 [MeterMemoryClockButtonIcon]
 Meter=Shape
 MeterStyle=StyleSettingsButtonGPU | StyleSettingsButton[&MeasureSettingsScriptGPU:GetAsset('check_icon', 'showMemoryClock', '1')]
-Y=4R
+;Y=4R
 
 [MeterMemoryClockButtonLabel]
 Meter=String
