--- a/Skins/Sonder/Time/Time_hori1.ini
+++ b/Skins/Sonder/Time/Time_hori1.ini
@@ -34,12 +34,6 @@ Format="%M"
 
 [Variables]
 @include=#@#Variables.inc
-;TMm11=1
-;TMm12=-0.31
-;TMm21=0
-;TMm22=1
-;TMm31TX=0
-;TMm32TY=0
 
 ;-------------------------------
 [Measuresettingsformula]
@@ -94,38 +88,9 @@ FontSize=(#TimeScale#*#TimeFontSize#)
 AntiAlias=1
 ClipString=0
 
-;There are two shadows, one with its own meter: 
-; X=(#TimeScale#*114)
-; Y=(#TimeScale#*(-22+#TimeYAdj#))
-;one within the shadow effect on the main time meter:
-; X=(#TimeScale#*112)
-; Y=(#TimeScale#*-3)r
-
-;[timeshadow]
-;StringAlign=Center
-;StringStyle=Normal
-;FontColor=#TimeShadowColor#
-;FontFace=#TimeFont#
-;FontSize=(#TimeScale#*#TimeFontSize#)
-;AntiAlias=1
-;ClipString=0
-
-;[Time1shadow]
-;Meter=STRING
-;MeasureName=MeasureTimeHour
-;MeterStyle=timeshadow
-;X=(#TimeScale#*114)
-;Y=(#TimeScale#*(-22+#TimeYAdj#))
-
-;[Time2shadow]
-;Meter=STRING
-;MeasureName=MeasureTimeMinutes
-;MeterStyle=timeshadow
-;X=(#TimeScale#*(225+#TimeHMSpacing#))r
-;Y=r
-
+;There are two shadows, one under StringEffect and one under InlineSetting: 
 ;Blur: Shadow | 0 | 0 | 3 | [fontcolor]
-;Shadow: Shadow | 2 | 3 | 0 | #TimeShadowColor#
+;Drop Shadow: Shadow | 2 | 3 | 0 | #TimeShadowColor#
 [Time1]
 Meter=STRING
 MeasureName=MeasureTimeHour
@@ -134,7 +99,6 @@ X=(#TimeScale#*112)
 Y=(#TimeScale#*(-25+#TimeYAdj#))
 InlineSetting=Shadow | #ShadowBlurX# | #ShadowBlurY# | #TimeBlurAmount# | #TimeShadowColorHour#
 DynamicVariables=1
-;TransformationMatrix=#TMm11#;#TMm12#;#TMm21#;#TMm22#;#TMm31TX#;#TMm32TY#
 
 [Time2]
 Meter=STRING
